Closed
Bug 290435
Opened 21 years ago
Closed 21 years ago
proxy settings are disabled after switching profiles
Categories
(SeaMonkey :: Preferences, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: eagle.lu, Unassigned)
Details
Attachments
(1 file, 2 obsolete files)
|
1.34 KB,
patch
|
alecf
:
review+
neil
:
superreview+
chofmann
:
approval1.8b2+
|
Details | Diff | Splinter Review |
re-preduce steps:
1. launch mozilla with profile manager
2. create a new profile named "test1" and use this profile
3. check "Use Preferences from System" in Preferences-->Advanced panel.
4. close mozilla
5. launch mozilla with profile manager
6. create a new profile named "test2" and use it
7. set proxies in Preferences->Advanced -> Proxies --> "Manual proxy configuration"
8. select Tools->"Switch Profile ..." menu item and select "test1"
Profile "test1" will be used and a new mozilla browser window will be opened
9. select Tools->"Switch Profile ..." menu item and select "test2"
10.Open the window Preferences->Advanced-> Proxies
Expected results:
The fields in "Manual proxy configuration" will be the settings set before.
Actual results:
We can't edit the "Manual proxy configuration" and the proxy is set to "direct
connect"
Attachment #180782 -
Flags: review?(alecf)
Summary: proxy settings are diable after switching profiles → proxy settings are disabled after switching profiles
Comment 2•21 years ago
|
||
Comment on attachment 180782 [details] [diff] [review]
patch
This seems like an unfortunate variable name.. how about "wasEnabled"?
r=alecf
Updated•21 years ago
|
Attachment #180782 -
Flags: review?(alecf) → review+
Attachment #180782 -
Flags: superreview?(neil.parkwaycc.co.uk)
Comment 3•21 years ago
|
||
Comment on attachment 180782 [details] [diff] [review]
patch
>@@ -176,8 +177,14 @@
> return NS_OK;
> }
> SYSPREF_LOG(("%s is enabled\n", sSysPrefString));
As you might guess from this log entry, there's an if (!mEnabled) just above
here that makes this patch useless. In fact, you would merely succeed in
overwriting the new profile's preferences with the old profile's preferences,
as nowhere does anyone actually clear the saved values before the profile
switch. I really don't know what the semantics of system preferences should be
but I don't see this patch improving them.
Attachment #180782 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview-
Attachment #180782 -
Attachment is obsolete: true
Thanks Neil's comments. I re-made the patch. Now nsSystemPref reset its status
when switching profile.
Attachment #181521 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #181521 -
Flags: review?(alecf)
Comment 5•21 years ago
|
||
Comment on attachment 181521 [details] [diff] [review]
a new patch
This sorta looks right although I'm worried that you might need to call
SavePrefFile(null); maybe someone who knows the code better can answer that.
Attachment #181521 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Attachment #181521 -
Flags: review?(alecf) → review-
Attachment #181521 -
Attachment is obsolete: true
No SavePrefFile() is needed, because when swithing profile,
nsPrefService::Observe will catch this event and call SavePrefFile() there.
Attachment #181939 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #181939 -
Flags: review?(alecf)
Comment 7•21 years ago
|
||
Comment on attachment 181939 [details] [diff] [review]
fix a bug in the previous patch
Yes, but who will see the event first?
Attachment #181939 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
nsSystemPref::Observe() will be called first. But I think it doesn't matter.
Though UseMozillaPrefs() restores the preferences to the original value,
SavePrefFile() will store the "config.use_system_prefs" as "true", so next time
when this profile is used, nsSystemPref::UseSystemPref() will be called (because
"config.use_system_prefs" is set to true), which will overwrite preferences set
by the values set in system wide. So the previous restored values don't take effect.
Comment 9•21 years ago
|
||
Comment on attachment 181939 [details] [diff] [review]
fix a bug in the previous patch
r=alecf
Seems like clearing mSysPrefService / mSysPrefs might be better refactored into
one routine, I have to imagine these same 3 lines appear elsewhere...
Attachment #181939 -
Flags: review?(alecf) → review+
Comment 10•21 years ago
|
||
checked into trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 11•21 years ago
|
||
the tree is frozen...
Updated•21 years ago
|
Attachment #181939 -
Flags: approval1.8b2?
Comment 12•21 years ago
|
||
Comment on attachment 181939 [details] [diff] [review]
fix a bug in the previous patch
a=chofmann
Attachment #181939 -
Flags: approval1.8b2? → approval1.8b2+
You need to log in
before you can comment on or make changes to this bug.
Description
•