fix bug 290435 proxy settings are disabled after switching profiles. alecf: review+ neil.parkwaycc.co.uk: superreview+ patched by Boying Lu <brian.lu@sun.com>